ft: worked on more sections, add rubik font

--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,8 @@
 @import "./sass/base/reset", "./sass/base/typography";
 //Component files
 @import  "./sass/components/hero", "./sass/components/header", "./sass/components/footer";
+@import  "./sass/components/subscribe", "./sass/components/features", "./sass/components/frequently-asked-question";
+@import  "./sass/components/call-to-action";
 //Layout files
 // @import "./sass/layouts/";
 //Pages files
