--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Rubik:wght@400;500&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -234,3 +235,203 @@ footer {
       flex-direction: row;
       gap: 3rem;
       margin-bottom: 0; } }
+
+.subscribe-container {
+  padding: 3.5rem 1.2rem;
+  background-color: #5368df;
+  color: #fff; }
+  .subscribe-container__header {
+    text-align: center;
+    max-width: 500px;
+    margin: 0 auto; }
+    .subscribe-container__header h3 {
+      font-size: 1.08rem;
+      letter-spacing: 0.173rem;
+      font-weight: 400; }
+    .subscribe-container__header h2 {
+      font-size: 1.5rem;
+      font-weight: 500;
+      letter-spacing: 0.073rem;
+      margin: 1rem 0 1.5rem; }
+  .subscribe-container__form {
+    max-width: 530px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem; }
+    .subscribe-container__form input {
+      width: 100%;
+      background-color: #fff;
+      color: #252b46;
+      padding: 1rem 1.5rem 1rem 1rem;
+      border-radius: 6px;
+      font-size: 1rem;
+      border: none;
+      outline: none; }
+    .subscribe-container__form button {
+      width: 100%;
+      padding: 1rem;
+      color: #fff;
+      text-align: center;
+      font-size: 1rem;
+      font-weight: 500;
+      background-color: #fa5757;
+      border: none;
+      border-radius: 6px; }
+
+@media screen and (min-width: 768px) {
+  .subscribe-container {
+    padding: 4rem 1.2rem 4.8rem; }
+    .subscribe-container__header {
+      text-align: center;
+      margin: auto; }
+      .subscribe-container__header h3 {
+        font-size: 1.2rem; }
+      .subscribe-container__header h2 {
+        font-size: 2.2rem;
+        margin: 2rem 0; }
+    .subscribe-container__form {
+      flex-direction: row;
+      gap: 1rem; }
+      .subscribe-container__form input {
+        width: 350px;
+        padding: 1rem 1.5rem 1rem 1rem;
+        font-size: 1.1rem; }
+      .subscribe-container__form button {
+        font-size: 1.1rem; } }
+
+.close {
+  display: none; }
+
+.faq-container {
+  padding: 4rem 1.2rem; }
+  .faq-container__header {
+    text-align: center;
+    margin: 0 auto 2rem;
+    max-width: 550px; }
+    .faq-container__header h2 {
+      color: #252b46;
+      font-size: 1.5rem;
+      font-weight: 500;
+      line-height: 1.4;
+      letter-spacing: 0.073rem;
+      margin-bottom: 1.2rem; }
+    .faq-container__header p {
+      font-size: 1rem;
+      line-height: 1.4;
+      color: #9194a1; }
+  .faq-container__questions {
+    max-width: 600px;
+    margin: 0 auto 2rem; }
+    .faq-container__questions li {
+      margin: 1.2rem 0;
+      border-bottom: 2px solid #9194a1; }
+      .faq-container__questions li h3 {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 1rem;
+        font-size: 0.95rem;
+        font-weight: 500; }
+        .faq-container__questions li h3 img {
+          transform: rotate(0);
+          transition: all 0.3s; }
+          .faq-container__questions li h3 img.translate {
+            transform: rotate(180deg); }
+      .faq-container__questions li p {
+        margin-bottom: 1rem;
+        font-size: 0.95rem; }
+  .faq-container__link {
+    text-align: center;
+    padding: 2rem 0; }
+    .faq-container__link a {
+      padding: 1rem;
+      background-color: #5368df;
+      color: #fff;
+      font-weight: 500;
+      border-radius: 6px; }
+
+@media screen and (min-width: 768px) {
+  .faq-container {
+    padding: 6.5rem 1.2rem; }
+    .faq-container__header {
+      margin: 0 auto 3rem; }
+      .faq-container__header h2 {
+        font-size: 2rem; }
+      .faq-container__header p {
+        font-size: 1.1rem; }
+    .faq-container__questions {
+      margin: 0 auto 3rem; }
+      .faq-container__questions li {
+        margin: 1.5rem 0; }
+        .faq-container__questions li h3 {
+          font-size: 1.1rem; }
+        .faq-container__questions li p {
+          font-size: 1rem; } }
+
+.cta-container {
+  padding: 3rem 1.2rem; }
+  .cta-container__header {
+    text-align: center;
+    margin: 0 auto 2rem;
+    max-width: 550px; }
+    .cta-container__header h2 {
+      color: #252b46;
+      font-size: 1.5rem;
+      font-weight: 500;
+      line-height: 1.4;
+      letter-spacing: 0.073rem;
+      margin-bottom: 1.2rem; }
+    .cta-container__header p {
+      font-size: 1rem;
+      line-height: 1.4;
+      color: #9194a1; }
+  .cta-container__cards {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2.5rem; }
+    .cta-container__cards--card {
+      border-radius: 1rem;
+      box-shadow: 0 0 5px rgba(83, 104, 223, 0.5);
+      text-align: center;
+      max-width: 320px; }
+      .cta-container__cards--card .card-header {
+        padding: 2.5rem 0 2.0rem; }
+        .cta-container__cards--card .card-header h3 {
+          font-size: 1.3rem;
+          font-weight: 500;
+          margin: 1.8rem 0 0.8rem;
+          color: #252b46; }
+        .cta-container__cards--card .card-header p {
+          color: #9194a1;
+          font-size: 1.1rem; }
+      .cta-container__cards--card .card-footer {
+        padding-bottom: 2.5rem; }
+        .cta-container__cards--card .card-footer img {
+          width: 100%;
+          margin-bottom: 2rem; }
+        .cta-container__cards--card .card-footer a {
+          background-color: #5368df;
+          color: #fff;
+          font-size: 1rem;
+          font-weight: 500;
+          padding: 0.9rem 1.5rem;
+          border-radius: 6px;
+          display: inline-block;
+          width: 85%; }
+
+@media screen and (min-width: 1024px) {
+  .cta-container {
+    padding: 4.5rem 1.2rem; }
+    .cta-container__header h2 {
+      font-size: 2rem; }
+    .cta-container__header p {
+      font-size: 1.1rem; }
+    .cta-container__cards {
+      flex-direction: row;
+      justify-content: center; }
+      .cta-container__cards--card:nth-child(2) {
+        margin-top: 5rem; }
+      .cta-container__cards--card:nth-child(3) {
+        margin-top: 10rem; } }
