--- a/src/sass/base/_typography.scss
+++ b/src/sass/base/_typography.scss
@@ -1,3 +1,2 @@
-// @import url('https://fonts.cdnfonts.com/css/helvetica-neue-55');
-
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Rubik:wght@400;500&display=swap');
 // @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
