--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -39,13 +39,15 @@
             align-items: center;
             justify-content: center;
             gap: 0.95rem;
+            flex-wrap: wrap;
 
             & a {
-                padding: 0.7rem 0.55rem;
+                padding: 0.8rem 0.7rem;
                 display: block;
                 border-radius: 6px;
                 font-weight: 500;
-                // font-size: 1rem;
+                font-size: 0.9rem;
+                min-width: 145px;
             }
 
             & .blue {
@@ -75,7 +77,6 @@
         position: relative;
         padding: 1.5rem;
         max-width: 1300px;
-        // background-color: #000000;
         
         display: flex;
         flex-direction: row-reverse;
@@ -120,8 +121,8 @@
                 & a {
                     padding: 0.9rem 1.5rem;
                     display: block;
-                    border-radius: 6px;
-                    font-weight: 500;
+                    // border-radius: 6px;
+                    // font-weight: 500;
                     font-size: 1.05rem;
                 }
     
