--- a/src/sass/components/_features.scss
+++ b/src/sass/components/_features.scss
@@ -1,26 +1,18 @@
+// Features section
 .features-container {
   padding: 3rem 1.2rem;
   max-width: 1300px;
-  margin: auto;
+  margin: 0 auto;
 
   &__header {
     text-align: center;
-    margin: 0 auto 2rem;
+    margin: 2rem auto;
     max-width: 550px;
 
     h2 {
-      color: $very-dark-blue;
       font-size: 1.5rem;
-      font-weight: 500;
-      line-height: 1.4;
       letter-spacing: 0.073rem;
-      margin-bottom: 1.2rem;
-    }
-
-    p {
-      font-size: 1rem;
-      line-height: 1.4;
-      color: $grayish-blue;
+      margin-bottom: 1.1rem;
     }
   }
 
@@ -30,13 +22,12 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-bottom: 2px solid $grayish-blue;
-    margin: 1rem auto 3rem;
+    border-bottom: 1px solid $grayish-blue;
+    margin: 3rem auto;
 
     li {
-      border-top: 2px solid $grayish-blue;
+      border-top: 1px solid $grayish-blue;
       width: 100%;
-
       text-align: center;
 
       h3 {
@@ -58,32 +49,25 @@
     margin: 2rem auto;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 6rem;
 
     &--details {
       max-width: 530px;
       margin: 0 auto;
 
       h3 {
-        color: $very-dark-blue;
         font-size: 1.3rem;
-        font-weight: 500;
-        line-height: 1.4;
         letter-spacing: 0.073rem;
       }
 
       p {
-        font-size: 1rem;
-        line-height: 1.4;
-        color: $grayish-blue;
-        margin: 1.2rem 0;
+        margin: 1rem 0 1.3rem;
       }
 
       a {
         padding: 0.7rem 1rem;
         background-color: $soft-blue;
         color: $white;
-        font-weight: 500;
         border-radius: 6px;
         display: inline-block;
       }
@@ -106,42 +90,28 @@
     }
 
     &__tabs {
-      // display: flex;
       flex-direction: row;
-      // justify-content: space-between;
-    //   border-bottom: 2px solid $grayish-blue;
       margin: 2rem auto 4rem;
 
       li {
         border-top: none;
-        width: 100%;
-
-        text-align: center;
 
         h3 {
-          font-weight: 400;
-          padding: 1.2rem 0;
           width: fit-content;
-          margin: 0 auto;
-        }
+          cursor: pointer;
 
-        h3.active {
-          font-weight: 500;
-          border-bottom: 3px solid $soft-red;
+          &:hover {
+            color: $soft-red;
+          }
         }
       }
     }
 
     &__item {
       text-align: left;
-
-      margin: 2rem auto;
-    //   display: flex;
-      // flex-direction: column;
       flex-direction: row;
       justify-content: space-between;
       align-items: center;
-
       gap: 2rem;
 
       &--details {
@@ -149,27 +119,16 @@
         margin: 0 auto;
 
         h3 {
-          color: $very-dark-blue;
-          font-size: 1.3rem;
-          font-weight: 500;
-          line-height: 1.4;
-          letter-spacing: 0.073rem;
+          font-size: 2rem;
         }
 
         p {
-          font-size: 1rem;
-          line-height: 1.4;
-          color: $grayish-blue;
-          margin: 1.2rem 0;
+          margin: 1.2rem 0 1.5rem;
         }
 
         a {
-          padding: 0.7rem 1rem;
-          background-color: $soft-blue;
-          color: $white;
-          font-weight: 500;
-          border-radius: 6px;
-          display: inline-block;
+          padding: 0.8rem 1.2rem;
+          font-size: 1.1rem;
         }
       }
     }
