--- a/src/sass/components/_call-to-action.scss
+++ b/src/sass/components/_call-to-action.scss
@@ -1,3 +1,4 @@
+// Call to action section
 .cta-container {
     padding: 3rem 1.2rem;
 
@@ -7,18 +8,9 @@
         max-width: 550px;
     
         h2 {
-          color: $very-dark-blue;
           font-size: 1.5rem;
-          font-weight: 500;
-          line-height: 1.4;
           letter-spacing: 0.073rem;
-          margin-bottom: 1.2rem;
-        }
-    
-        p {
-          font-size: 1rem;
-          line-height: 1.4;
-          color: $grayish-blue;
+          margin-bottom: 1.1rem;
         }
       }
     
@@ -29,7 +21,7 @@
         gap: 2.5rem;
 
         &--card {
-            border-radius: 1rem;
+            border-radius: 0.8rem;
             box-shadow: 0 0 5px rgba($color: $soft-blue, $alpha: 0.5);
             text-align: center;
             max-width: 320px;
@@ -39,36 +31,30 @@
 
                 h3 {
                     font-size: 1.3rem;
-                    font-weight: 500;
                     margin: 1.8rem 0 0.8rem;
-                    color: $very-dark-blue;
                 }
 
                 p {
-                    color: $grayish-blue;
                     font-size: 1.1rem;
                 }
             }
 
             .card-footer {
-                padding-bottom: 2.5rem;
+                padding-bottom: 2rem;
 
                 img {
                     width: 100%;
-                    margin-bottom: 2rem;
+                    margin-bottom: 1.5rem;
                 }
 
                 a {
                     background-color: $soft-blue;
                     color: $white;
                     font-size: 1rem;
-                    font-weight: 500;
                     padding: 0.9rem 1.5rem;
                     border-radius: 6px;
                     display: inline-block;
                     width: 85%;
-                    // margin: 0 1.5rem;
-
                 }
             }
         }
@@ -99,6 +85,15 @@
 
             &--card:nth-child(3) {
                 margin-top: 10rem;
+            }
+
+            .card-footer a {
+              border: 2px solid $soft-blue;
+    
+              &:hover {
+                background: $white;
+                color: $soft-blue;
+              }
             }
           }
     }  
