--- a/src/sass/components/_hero.scss
+++ b/src/sass/components/_hero.scss
@@ -1,145 +1,116 @@
-
+// Hero section
 .hero-container {
-    padding: 0 1.2rem;
-    margin: 7rem 0 2rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4rem;
+  padding: 0 1.2rem;
+  margin: 7rem auto 3.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 4rem;
 
-    &__image{
-//  position: relative;
-       img {
-        width: 100%;
-        // position: relative;
-        // z-index: 3;
-       }
+  &__image {
+    img {
+      width: 100%;
+    }
+  }
+
+  &__details {
+    max-width: 530px;
+    text-align: center;
+
+    h1 {
+      font-size: 1.6rem;
+    }
+
+    p {
+      margin: 1rem 0 1.5rem;
+    }
+
+    &--buttons {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      gap: 0.95rem;
+      flex-wrap: wrap;
+
+      a {
+        padding: 0.8rem 0.7rem;
+        display: block;
+        border-radius: 6px;
+        font-size: 0.93rem;
+        min-width: 145px;
+      }
+
+      & .blue {
+        background: $soft-blue;
+        color: $white;
+      }
+
+      & .grey {
+        color: $very-dark-blue;
+        background: $grayish-blue-50;
+        box-shadow: 0 0 5px rgba($color: $very-dark-blue, $alpha: 0.5);
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero-container {
+    margin: 3rem auto 4.5rem;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .hero-container {
+    position: relative;
+    max-width: 1300px;
+    flex-direction: row-reverse;
+    gap: 3rem;
+    justify-content: space-between;
+
+    &__image {
+      min-width: 500px;
     }
 
     &__details {
-        max-width: 530px;
-        text-align: center;
-        & h1 {
-            // font-size: 2rem;
-            font-weight: 600;
-            margin-bottom: 1rem;
-            color: $very-dark-blue;
-            line-height: 1.4;
-            
+      text-align: left;
+
+      h1 {
+        font-size: 2.3rem;
+        max-width: 85%;
+      }
+
+      p {
+        font-size: 1.1rem;
+        margin: 1.8rem 0 1.9rem;
+      }
+
+      &--buttons {
+        justify-content: flex-start;
+        gap: 1.5rem;
+
+        a {
+          padding: 0.9rem 1.5rem;
+          font-size: 1.1rem;
         }
 
-        & p {
-            // font-size: 1.1rem;
-            margin-bottom: 1.5rem;
-            line-height: 1.4;
+        & .blue {
+          border: 2px solid $soft-blue;
+
+          &:hover {
+            background: $white;
+            color: $soft-blue;
+          }
         }
 
-        &--buttons {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            gap: 0.95rem;
-            flex-wrap: wrap;
-
-            & a {
-                padding: 0.8rem 0.7rem;
-                display: block;
-                border-radius: 6px;
-                font-weight: 500;
-                font-size: 0.9rem;
-                min-width: 145px;
-            }
-
-            & .blue {
-                background: $soft-blue;
-                color: $white;
-            } 
-
-            & .grey {
-                color: $very-dark-blue;
-                background: $grayish-blue-50;
-                box-shadow: 0 0 5px rgba($color: #000000, $alpha: 0.5);
-                // background-color: $grayish-blue;
-            }
+        & .grey {
+          &:hover {
+            background: $white;
+            border: 2px solid $grayish-blue;
+            padding: calc(0.9rem - 2px) calc(1.5rem - 2px);
+          }
         }
-
+      }
     }
-}
-
-@media screen and (min-width: 768px){
-    .hero-container {
-        margin: 3rem auto 3.5rem;
-    }
-}
-
-@media screen and (min-width: 1024px){
-    .hero-container {
-        position: relative;
-        padding: 1.5rem;
-        max-width: 1300px;
-        
-        display: flex;
-        flex-direction: row-reverse;
-        align-items: center;
-        gap: 3rem;
-        justify-content: space-between;
-        // overflow-x: hidden;
-
-        &__image {
-            min-width: 500px;
-            // position: relative;
-            // right: -7rem;
-            top: 20%;
-            // width: 500px;
-
-        }
-    
-        &__details {
-            
-            text-align: left;
-            & h1 {
-                font-size: 2rem;
-                font-weight: 600;
-                margin-bottom: 1.8rem;
-                color: $very-dark-blue;
-                line-height: 1.4;
-                max-width: 80%;
-            }
-    
-            & p {
-                font-size: 1.1rem;
-                margin-bottom: 1.9rem;
-                line-height: 1.5;
-            }
-    
-            &--buttons {
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-                gap: 1.5rem;
-    
-                & a {
-                    padding: 0.9rem 1.5rem;
-                    display: block;
-                    // border-radius: 6px;
-                    // font-weight: 500;
-                    font-size: 1.05rem;
-                }
-    
-                & .blue {
-                    background: $soft-blue;
-                    color: $white;
-                } 
-    
-                & .grey {
-                    color: $very-dark-blue;
-                    background: $grayish-blue-50;
-                    box-shadow: 0 0 5px rgba($color: #000000, $alpha: 0.5);
-                    // background-color: $grayish-blue;
-                }
-            }
-    
-        }
-    }
-      
+  }
 }
